fix spacing and rows and order

--- a/src/components/main/main.component.css
+++ b/src/components/main/main.component.css
@@ -29,6 +29,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         column-gap: 10px;
+        row-gap: 10px;
     }
 
     .projects h2 {
@@ -42,10 +43,11 @@
     .project {
         background-color: var(--mat-sys-primary);
         color: var(--mat-sys-on-primary);
+        height: 100%;
     }
 
     .project img {
-        object-fit: scale-down;
+        object-fit: contain;
         width: 100%;
         height: 100%;
         padding: 10px 0;
